<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity"
>
    <item android:id="@+id/action_show_tabs"
          android:title="Tabs"
          app:showAsAction="always"/>

    <item android:id="@+id/action_refresh"
          android:title="Refresh"
          app:showAsAction="never"/>

    <item android:id="@+id/action_share_url"
          android:title="Share"
          app:showAsAction="never"
          app:actionProviderClass="androidx.appcompat.widget.ShareActionProvider"
    />

    <item android:id="@+id/action_mode_change"
          android:title="Desktop/Mobile"
          app:showAsAction="never"/>

    <item android:id="@+id/action_settings"
          android:title="Settings"
          app:showAsAction="never"/>
</menu>